<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/icon_mother"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/icon_appointment"
            android:title="@string/menu_schedule" />
        <item
            android:id="@+id/nav_increase"
            android:icon="@drawable/icons8_increase_64"
            android:title="@string/menu_increase" />
        <item
            android:id="@+id/nav_blog"
            android:icon="@drawable/icon_blog"
            android:title="@string/menu_blog" />
        <item
            android:id="@+id/nav_book_doctor"
            android:icon="@drawable/icon_doctor"
            android:title="@string/menu_book" />
    </group>
</menu>